--- a/templates/base.html
+++ b/templates/base.html
@@ -33,11 +33,9 @@
 
                 <!-- Navbar links -->
                 <ul class="nav-menu">
-                    <li><a class="nav-link" href="{{ url_for('projects_page') }}">PROJECTS</a></li>
-                    <li><a class="nav-link" href="{{ url_for('contact_page') }}">CONTACT</a></li>
-                    <!-- <li><a class="nav-link" href="#">BlOG</a></li> -->
+                    
                     <li>
-                        <a class="btn btn-primary" href="https://github.com/dmdhrumilmistry">RESUME <i
+                        <a class="btn btn-primary" href="https://github.com/Vishnukv07/">RESUME <i
                                 class="fas fa-arrow-right"></i></a>
                     </li>
 
