--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
   <div class="content-text">
     <h2>Xstore Infra Specialist</h2>
     <p>
-      Can communicate in Powershell,Python<br>I create Web Services and Products
+      Skilled in Powershell,Python<br> I 
+      implement, maintain, and optimize Xstore infrastructure to support seamless retail
+      operations
     </p>
   </div>
   <a href="#footer" class="btn btn-secondary">Connect With Me</a>
