--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <div class="content-text">
     <h2>Xstore Infra Specialist</h2>
     <p>
-      Skilled in Powershell,Python<br> I 
+      Skilled in Powershell,Python<br> Good in 
       implement, maintain, and optimize Xstore infrastructure to support seamless retail
       operations
     </p>
