--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,11 @@
                 <a href="https://github.com/vishnukv07"><img
                         src="{{ url_for('static', filename='assets/github-icon.svg') }}" alt="GitHub"
                         style="border-radius: 0px;"></a>
+
+                        <a href="https://www.facebook.com/vishnu.kudroli/"><img
+                            src="{{ url_for('static', filename='assets/facebook-4.svg') }}" alt="FaceBook"
+                            style="border-radius: 0px;"></a>
+                        
             </div>
             <!-- Attribution -->
             <p>Copyright &copy; Vishnu K V 2022, All rights reserved</p>
