added few icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 {% block headersection %}
 
 <section class="header-container">
-  <img class="profile-image" src="https://avatars.githubusercontent.com/u/56185972" alt="" />
+  <img class="profile-image" src="https://avatars.githubusercontent.com/vishnukv07" alt="" />
   <h1>Hey Visitor! I'm Vishnu K V</h1>
 
   <div class="content-text">
     <h2>Xstore Infra Specialist</h2>
     <p>
-      Skilled in Powershell,Python<br> Good in 
-      implement, maintain, and optimize Xstore infrastructure to support seamless retail
+      Skilled in Powershell,Python<br> Hands on experience in
+      implementing, maintaining, and optimize Xstore infrastructure to support seamless retail
       operations
     </p>
   </div>
@@ -29,26 +29,27 @@
         <tr>        
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
-              <h2><i class="fab fa-bug"></i></h2>
-              <h4>PowerShell and Bash Scripting</h4>
+              <h2><i class="fab fa-windows"></i>
+                <i class="fab fa-powersehll"></i></h2>
+              <h4>PowerShell</h4>
+            </div>
+          </td>
+          <td  style="padding: 20px;">
+            <div class="textcard" style="padding: 20px;">
+              <h2><i class="fab fa-bash"></i></h2>
+              <h4>Bash</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
-              <h2><i class="fab fa-code"></i></h2>
-              <h4>Ansible</h4>
-            </div>
-          </td>
-          <td  style="padding: 20px;">
-            <div class="textcard"  style="padding: 20px;">
-              <h2><i class="fab fa-server"></i></h2>
+              <h2><i class="fab fa-docker"></i></h2>
               <h4>Docker</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
             <div class="textcard"  style="padding: 20px;">
-              <h2><i class="fab fa-cloud"></i></h2>
-              <h4>Cloud</h4>
+              <h2><i class="fab fa-ansible"></i></h2>
+              <h4>Ansible</h4>
             </div>
           </td>
           <td  style="padding: 20px;">
