--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,13 @@
     <title>{{ title }}</title>
 
     <!-- Link -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="192x192" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/png" sizes="512x512" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/56185972" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://avatars.githubusercontent.com/vishnukv07" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://avatars.githubusercontent.com/vishnukv07" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/vishnukv07" />
+    <link rel="icon" type="image/png" sizes="192x192" href="https://avatars.githubusercontent.com/vishnukv07" />
+    <link rel="icon" type="image/png" sizes="512x512" href="https://avatars.githubusercontent.com/vishnukv07" />
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/vishnukv07"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/utilities.css') }}" />
 </head>
@@ -28,7 +27,7 @@
             <div class="container">
                 <!-- Logo -->
                 <h1 id="logo">
-                    <a href="/"><img src="https://avatars.githubusercontent.com/u/56185972" alt="Logo" /></a>
+                    <a href="/"><img src="https://avatars.githubusercontent.com/vishnukv07" alt="Logo" /></a>
                 </h1>
 
                 <!-- Navbar links -->
@@ -81,12 +80,12 @@
                         style="border-radius: 0px;"></a>
 
                         <a href="https://www.facebook.com/vishnu.kudroli/"><img
-                            src="{{ url_for('static', filename='assets/facebook-4.svg') }}" alt="FaceBook"
+                            src="{{ url_for('static', filename='assets/facebook-icon-1.svg') }}" alt="FaceBook"
                             style="border-radius: 0px;"></a>
                         
             </div>
             <!-- Attribution -->
-            <p>Copyright &copy; Vishnu K V 2022, All rights reserved</p>
+            <p>Copyright &copy; Vishnu K V 2024, All rights reserved</p>
         </div>
     </footer>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
