--- a/templates/index.html
+++ b/templates/index.html
@@ -27,33 +27,36 @@
     <div class="container">
       <table style="text-align: center;">
         <tr>        
-          <td  style="padding: 20px;">
-            <div class="textcard"  style="padding: 20px;">
+          <td  style="padding: 40px;">
+            <div class="textcard"  style="padding: 40px;">
               <h2><i class="fab fa-windows"></i>
                 <i class="fab fa-powersehll"></i></h2>
               <h4>PowerShell</h4>
             </div>
           </td>
-          <td  style="padding: 20px;">
-            <div class="textcard" style="padding: 20px;">
-              <h2><i class="fab fa-bash"></i></h2>
+          <td  style="padding: 40px;">
+            <div class="textcard" style="padding: 40px;">
+              <img class="textcardasset" src="static/assets/bash-2.svg" alt="Bash Logo">
+              <!-- <h2><i class="fab fa-bash"></i></h2> -->
               <h4>Bash</h4>
             </div>
           </td>
-          <td  style="padding: 20px;">
-            <div class="textcard"  style="padding: 20px;">
+          <td  style="padding: 40px;">
+            <div class="textcard" style="padding: 40px;">
+              <img class="textcardasset" src="static/assets/ansible.svg" alt="ansibleLogo">
+              <!-- <h2><i class="fab fa-bash"></i></h2> -->
+              <h4>Ansible</h4>
+            </div>
+          </td>
+          <td  style="padding: 40px;">
+            <div class="textcard"  style="padding: 40px;">
               <h2><i class="fab fa-docker"></i></h2>
               <h4>Docker</h4>
             </div>
           </td>
-          <td  style="padding: 20px;">
-            <div class="textcard"  style="padding: 20px;">
-              <h2><i class="fab fa-ansible"></i></h2>
-              <h4>Ansible</h4>
-            </div>
-          </td>
-          <td  style="padding: 20px;">
-            <div class="textcard"  style="padding: 20px;">
+         
+          <td  style="padding: 40px;">
+            <div class="textcard"  style="padding: 40px;">
               <h2><i class="fab fa-linux"></i></h2>
               <h4>Linux</h4>
             </div>
